<?xml version="1.0"?>
<package format="2">
  <name>elevationmap_server</name>
  <version>0.0.0</version>
  <description>ROS map server based on elevation map</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ros_node_utils</depend>
  <depend>occupancy_grid_map</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>